--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="stytle.css" />
-    <title>Document</title>
+    <title>To Do App</title>
   </head>
   <body>
     <div class="container">
       <h1>To Do List</h1>
-      <input type="text" name="element" id="add-input" placeholder="Task to be done.."/>
+      <input type="text" name="element" id="add-input" placeholder="Task to be done.." onfocus="this.value=''"/>
       <button id="add-button">Add</button>
       
     </div>
